Hover button added

--- a/Task02/i230726_AdullahNasir_A/index.html
+++ b/Task02/i230726_AdullahNasir_A/index.html
@@ -89,6 +89,10 @@
             background-position: center; 
             display: none; 
         }
+
+        button:hover, #start:hover{
+            background-color: darkgreen;
+        }
         .buttons{
             display: flex;
         }
